Avoid newer Java String APIs on Android minSdk 26